--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -219,6 +219,10 @@
     &_small{
       max-width: 10.1429rem;
     }
+
+    &_big {
+      max-width: 15.5714rem;
+    }
   }
 
   &__separator {
